--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 .sidebar{
     background-color: #000;
-    width: 340px;
+    width: 388px;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -84,4 +84,54 @@ body{
 }
 .icons i:hover{
     opacity: 1;
+}
+.box{
+    background-color: #232323;
+    height: 8rem;
+    border-radius: 0.75rem;
+    margin: 0.75rem 0 1.75rem 0;
+    padding: 0.75rem 1rem;
+}
+.box-p1{
+    font-size: 1rem;
+    font-weight: 700; 
+}
+.box-p2{
+    font-size: 0.75;
+    opacity: 0.9;
+    font-weight: 500;
+}
+.badge{
+    background-color: #ffffff;
+    border: none;
+    border-radius: 100px;
+    padding: 0.25rem 1rem;
+    font-weight: 700;
+    margin-top: 0.5rem;
+    height: 2rem;
+    width: fit-content;
+}
+.sticky-nav{
+    position: sticky;
+    top: 0;
+    background-color: #121212;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0 1rem 0;
+}
+.badge{
+    justify-content: center;
+    align-items: center;
+    border: ;
+}
+.badge1{
+    background-color: #121212 ;
+    opacity: .75;
+    color: white ;
+}
+@media (max-width:1000px){
+    .hide{
+        display: none ;
+    }
 }
