--- a/style.css
+++ b/style.css
@@ -221,3 +221,17 @@ body{
     border-radius: 50%;
     margin-top: -6px;
 }
+.controls i{
+    font-size: larger;
+    color: white;
+    opacity: .6;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.controls i:hover{
+    opacity: 1;
+}
+.controls{
+    display: flex;
+    justify-content:right;
+}
